<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "Scan QR"><!ENTITY package "com.anubhav.scanqr.client">]>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">&appname;</string>
    <string name="file_provider_authority">&package;.provider</string>

    <string name="take_pic_btn_label">Take photos</string>
    <string name="front_picture">Front Camera Picture</string>
    <string name="back_picture">Back Camera Picture</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="front_camera">Front Camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="no_camera">There is no camera on this device</string>
    <string name="no_results">No results</string>
    <string name="copy_text">Copy text</string>
    <string name="go_to_website">Go to website</string>
    <string name="generate">Generate</string>
    <string name="qr_appear_desc">Your QR Code will appear here</string>
    <string name="qr_code_details">QR Code Details</string>
    <string name="scan_any_qr">Scan Any QR Code</string>
    <string name="browse_from_gallery">Browse Image from Gallery</string>

    <string name="no_internet_title">No Network Connection</string>
    <string name="internet_title">No Network Connection</string>
    <string name="internet_msg">No Network Connection. Connect to the internet and try again</string>
    <string name="date_error">Error in getting daya</string>
    <string name="internet_postivetext">Check Again</string>
    <string name="internet_negativetext">Cancel</string>
    <string name="nonterworkconn">No network connection. Connect to the \ninternet and try again</string>
    <string name="nointernet">No Internet connection</string>

    <string name="size_B">%d B</string>
    <string name="size_KB">%.2f KB</string>
    <string name="size_MB">%.2f MB</string>
    <string name="size_GB">%.2f GB</string>
    <string name="combine_two_strings" translatable="false">%1$s | %2$s</string>
    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>

    <string name="label_search">Search</string>
    <string name="label_share">Share</string>
    <string name="label_submit">Submit</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_dismiss">Dismiss</string>
    <string name="label_required">Required*</string>
    <string name="label_done">Done</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_exit">Exit</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_save">Save</string>
    <string name="label_close">Close</string>
    <string name="label_clear">Clear</string>
    <string name="select_image_head">Click to select Picture</string>
    <string name="select_image_take_picture">Take Picture</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>
    <string name="permission_read_contacts_rationale">Read contacts permission is needed to fetch contacts.</string>

    <string name="splashpromotedtext">Developed by : </string>
    <string name="splashpromotedby">Anubhav Technologies</string>

</resources>