<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mylayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lay_uploadimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_cardview_top_corner"
        android:orientation="horizontal"
        android:padding="@dimen/ten"
        android:visibility="visible">

        <TextView
            android:id="@+id/txt_uploadhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five"
            android:gravity="center"
            android:padding="@dimen/seven"
            android:text="@string/select_image_head"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_seventeen"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/lay_btn"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_below="@+id/txt_uploadhead"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/dialog_fromgallery"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/back_cardview"
                android:backgroundTint="#585da7"
                android:padding="@dimen/ten">

                <ImageView
                    android:id="@+id/img_gallery"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_choose_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_gallery"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="Browse Gallery"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ts_seventeen" />

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <RelativeLayout
                android:id="@+id/dialog_fromcamera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/back_cardview"
                android:backgroundTint="#a8cf45"
                android:padding="@dimen/ten">

                <ImageView
                    android:id="@+id/img_gallery2"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_capture_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_gallery2"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/select_image_take_picture"
                    android:textColor="@color/white"
                    android:textSize="@dimen/ts_seventeen" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/dialog_cancel"
            style="@style/LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay_btn"
            android:layout_margin="10dp"
            android:backgroundTint="#FFB74D"
            android:text="@string/label_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_eighteen" />

    </RelativeLayout>

</RelativeLayout>